# tensorflow

./: .bazelrc  .gitignore  configure.py
study/: BUILD.md
study/python-scripts/: frozen_add_model.pb  model_util.py  simple_add.py
study/python-scripts/saved_simple_add/00001/: saved_model.pb
study/python-scripts/simple_add_v2/00001/: saved_model.pb
study/start_tf_simple/: CMakeLists.txt  add.cc  add.hpp  main.cc  tensor_util.hpp
study/start_tf_simple/test/: CMakeLists.txt  add_test.cc
tensorflow/: BUILD
tensorflow/c/: BUILD  c_api.cc  c_api.h
tensorflow/cc/: BUILD
tensorflow/compiler/jit/: BUILD
tensorflow/core/: BUILD
tensorflow/core/common_runtime/eager/: BUILD  kernel_and_device.cc
tensorflow/core/grappler/optimizers/: BUILD
tensorflow/core/kernels/: BUILD
